src/styles/_page.scss
body {
	@include media-breakpoint-up(md) {
		padding: $container-padding 0;
	}
}

header {
	@include clearfix();
	margin-bottom: $container-margin;
	border-bottom: $divider-border;
}

nav {
	@extend .navbar;
	@extend .navbar-expand-md;
	@extend .navbar-light;

	padding: 0;

	@include media-breakpoint-up(md) {
		padding: $nav-link-padding 0;
	}

	> a {
		@extend .navbar-brand;
		font-size: $header-font-size;
		font-weight: $header-font-weight;
	}

	button {
		@extend .navbar-toggler;
	}

	div {
		@extend .navbar-collapse;
		@extend .justify-content-end;
	}

	ul {
		@extend .navbar-nav;
		@extend .nav-pills;

		> li {
			@extend .nav-item;

			&:last-of-type {
				padding-bottom: $nav-link-padding;

				@include media-breakpoint-up(md) {
					padding-bottom: 0;
				}
			}

			> a {
				@extend .nav-link;
				margin: 0;
				padding: $nav-link-padding;

				@include media-breakpoint-up(md) {
					margin-right: $nav-link-margin;
				}

				&.active {
					color: $nav-link-active-color;
				}
			}
		}
	}
}

main {
	min-height: $content-min-height;
}

.jumbotron {
	text-align: center;

	h1 {
		font-weight: $heading-font-weight;

		@include media-breakpoint-up(sm) {
			font-size: 3.5em;
		}
	}

	p {
		@extend .lead;
	}
}

footer {
	margin-top: $container-margin;
	border-top: $divider-border;
	padding-top: $container-padding;
	color: $text-muted;

	a {
		color: inherit;

		&:hover {
			color: inherit;
		}
	}

	svg {
		margin-top: -3px;
	}
}

.column {
	padding: 0 $container-padding;
	
	&:nth-child(even) {
		margin-top: 1rem;
	}

	@include media-breakpoint-up(md) {
		@include make-col(6);

		&:nth-child(even) {
			margin-top: 0;
		}
	}
}

